--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.24.0",
+    "muicss": "^0.9.42",
     "react": "^16.8.6",
+    "react-datepicker": "^2.8.0",
+    "react-day-picker": "^7.3.0",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-dropdown": "^1.6.4",
+    "react-moment": "^0.9.2",
+    "react-scripts": "3.0.1",
+    "react-select": "^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
